syntax = "proto3";

package rivet.backend.pkg.game_user.msg.session_create;

import "proto/common.proto";

/// name = "msg-game-user-session-create"
/// parameters = [
/// 	{ name = "game_user_id" },
/// ]
message Message {
	rivet.common.Uuid game_user_id = 1;
	rivet.common.Uuid refresh_jti = 2;
}
